--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MPL-2.0",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "day1": "yarn start 1",
+    "day2": "yarn start 2"
   },
   "dependencies": {
     "consola": "2.11.0",
