--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "day1": "yarn start 1",
     "day2": "yarn start 2",
     "day3": "yarn start 3",
-    "day4": "yarn start 4"
+    "day4": "yarn start 4",
+    "day5": "yarn start 5"
   },
   "dependencies": {
     "consola": "2.11.0",
